# patra

./: .gitignore  README.md
.lexa/: graph.lexa
RadarTaniMobile/: ContentView.swift  RadarTaniApp.swift  RadarTaniMobileApp.swift
RadarTaniMobile.xcodeproj/: project.pbxproj
RadarTaniMobile/App/: AppConstants.swift  AppEnvironment+VMFactory.swift  AppEnvironment.swift  AppRouter.swift  AppState.swift  ContentView.swift
RadarTaniMobile/Models/: AIPlantDiagnosis.swift  APIResponse.swift  AuthToken.swift  Coordinate.swift  ErrorResponse.swift  Farm.swift  FeedReportOut.swift  MapReportOut.swift  NotificationItem.swift  OrderOut.swift  PaginatedList.swift  PesticideOrder.swift  PlantReportOut.swift  Report.swift  ReportHistoryItem.swift  User.swift
RadarTaniMobile/PreviewContent/: MockDiagnosis.swift  MockFarm.swift  MockReport.swift  MockUser.swift
RadarTaniMobile/Resources/: Localizable.xcstrings
RadarTaniMobile/Services/: AIService.swift  AuthService.swift  (+12 more)
backend/: .coverage  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/.data/: radar_tani.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  errors.py  integrations.py  main.py  models.py  schemas.py  security.py  services.py
backend/app/routers/: auth.py  dashboard.py  devices.py  farms.py  feed.py  notifications.py  orders.py  reports.py
backend/tests/: conftest.py  test_api.py
docs/: api-contract-fastapi.md  backend-development-guide.md  user-flow-lapor-tanaman-penyakit.md
(+139 files in other folders)
