[project]
name = "radar-tani-backend"
version = "1.0.0"
description = "FastAPI backend for Radar Tani Desa"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "firebase-admin>=7.1.0",
    "google-genai>=1.33.0",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pwdlib[argon2]>=0.2.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "supabase>=2.18.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
